tests/NormalTests/paczka1/small_fuzzy/77148304.err
Error in line 7: 1zTsgLJBuQa S811 83,1
Error in line 12: A484 A407 3A,8
